feat: add section - price

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header none1">
         <div class="header__logo">
-            <img src="./images/svg/logo.svg" alt="Logo">
+            <img src="./images/logo.svg" alt="Logo">
         </div>
         <nav class="header__nav">
             <ul class="header__menu">
@@ -66,10 +66,12 @@
                     </div>
 
                     <div class="service-card__link">
-                        <a href="#" class="card__link-button btn"><img src="./images/svg/mob-phone.svg" alt="" width="32" height="24">+7 999 99 99</a>
-                        <a href="#" class="card__link-button btn"><img src="./images/svg/old-phone.svg" alt="" width="32" height="24">+7 999 99 99</a>
+                        <!-- <a href="#" class="card__link-button btn"><img src="./images/svg/mob-phone.svg" alt="" width="32" height="24">+7 999 99 99</a>
+                        <a href="#" class="card__link-button btn"><img src="./images/svg/old-phone.svg" alt="" width="32" height="24">+7 999 99 99</a> -->
+                        <a href="#" class="card__link-button btn">+7 999 99 99</a>
+                        <a href="#" class="card__link-button btn">+7 999 99 99</a>
                         <div class="service-card__adr">
-                            <img src="./images/svg/location-filled.svg" alt="" width="28" height="25">Место стоянки<br><span>Москва, ул Пушкина</span>
+                            Место стоянки<br><span>Москва, ул Пушкина</span>
                         </div>
                         <a href="#" class="card__link-button btn btn--transparent"><span>ID объявления 63</span><br><span>Заказать рекламу</span></a>
                     </div>
@@ -102,9 +104,9 @@
         <div class="container">
             <article class="call-tow">
                 <div class="call-tow__box">
-                    <h3 class="call-tow__title">Как вызвать эвакуатор в Москве дешево?</h3>
-                    <p class="call-tow__desc">Поломка авто или ДТП – случайностей на дороге много. Решение одно – вызвать эвакуатор и доставить неисправный автомобильна СТО/парковку или в гараж в Москве. С помощью онлайн-сервиса Эварус вы сможете заказать услугу эвакуатора в Москве (Московской области) максимально быстро и при этом сэкономить.</p>
-                    <p class="call-tow__desc">Мы предоставляем доступ к базе коммерческих и частных эвакуаторов Москвы. Это надежные компании, которые оперативно пришлют спецтехнику вам на помощь и обеспечат безопасную транспортировку авто.</p>
+                    <h3 class="call-tow__title h2-text">Как вызвать эвакуатор в Москве дешево?</h3>
+                    <p class="call-tow__desc p-text">Поломка авто или ДТП – случайностей на дороге много. Решение одно – вызвать эвакуатор и доставить неисправный автомобильна СТО/парковку или в гараж в Москве. С помощью онлайн-сервиса Эварус вы сможете заказать услугу эвакуатора в Москве (Московской области) максимально быстро и при этом сэкономить.</p>
+                    <p class="call-tow__desc p-text">Мы предоставляем доступ к базе коммерческих и частных эвакуаторов Москвы. Это надежные компании, которые оперативно пришлют спецтехнику вам на помощь и обеспечат безопасную транспортировку авто.</p>
                 </div>
 
                 <div class="call-tow__img">
@@ -308,6 +310,62 @@
         </div>
     </section>
 
+    <section class="price container none1">
+        <div class="tabs p-text">
+
+            <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
+            <label for="tab1" class="tabs__label">Стоимость</label>
+            <div class="tabs__content">
+                <h2 class="price__title h2-text">Стоимость вызова эвакуатора для перевозки авто</h2>
+                <p class="price__description">На сайте Эварус представлены цены, выставленные перевозчиками за стандартную услугу эвакуации авто по Москве и области. Начальная стоимость транспортировки зависит от габаритов и веса ТС: перевозка мотоцикла/малолитражки будет стоить дешевле, чем внедорожника/минивена. Дороже всего обойдется эвакуация неисправной спецтехники и грузового транспорта.</p>
+
+                <h3 class="price__subtitle">На стоимость услуги эвакуатора в Москве влияет ряд факторов:</h3>
+                <ul class="price__factors">
+                    <li class="price__factor">класс, масса, степень повреждения транспортируемого авто</li>
+                    <li class="price__factor">первоначальное месторасположение ТС в Москве и дальность следования</li>
+                    <li class="price__factor">сложность погрузочно-разгрузочных операций</li>
+                    <li class="price__factor">дорожные и погодные условия Москвы</li>
+                </ul>
+
+                <p class="price__description">Окончательная цена зависит от того, куда подавать эвакуатор и где впоследствии выгружать автомобиль: Москва это будет или Московская область. Транспортировка по МО оплачивается отдельно, плюс тариф за каждый км пробега от МКАД. Суммарная оплата увеличится, если автомобиль находится в кювете/яме/гараже/во дворе и подъезд к ней сложен. Стоимость эвакуации ТС с заблокированными колес/рулевого управления или серьезного повреждения ТС.</p>
+
+                <p class="price__description">Конечную стоимость авто вы сможете обсудить с перевозчиком. Ознакомившись с конкретной ситуацией, он озвучит цену и сроки подачи эвакуатора.</p>
+
+                <h3 class="price__subtitle">В каких случаях возможно изменение стоимости услуги после прибытия эвакуатора к месту погрузки авто:</h3>
+                <ul class="price__cases">
+                    <li class="price__case">простой эвакуатора по вине клиента</li>
+                    <li class="price__case">смена маршрута после размещения заказа</li>
+                    <li class="price__case">непредвиденное усложнение эвакуации из-за неправильных/неполных данных о ТС</li>
+                </ul>
+
+                <p class="price__description">Во избежание непредвиденных трат, сообщите диспетчерской службе подобные сведения о своем автомобиле и обстоятельствах его поломки.</p>
+            </div>
+
+            <input type="radio" class="tabs__radio" name="tabs-example" id="tab2">
+            <label for="tab2" class="tabs__label">Как заказать</label>
+            <div class="tabs__content">
+                <h2 class="price__title h2-text">Стоимость вызова эвакуатора для перевозки авто</h2>
+                <p class="price__description">Воспользовавшись онлайн-ресурсом Эварус, вы сократите время на поиск эвакуатора в Москве, МО и закажете услугу по оптимальной цене. Вам не придется обзванивать знакомых или долго искать телефон эвакуатора в интернете. Проанализируйте предложения на нашем сайте, выберите лучшие условия и стоимость перевозки.</p>
+
+                <h3 class="price__subtitle">Как вызвать эвакуатор с помощью онлайн-сервиса ТутЭвакуатор.Ру:</h3>
+                <ol class="price__steps">
+                    <li class="price__step">Ознакомьтесь с картой Москвы и Московской области, на которой желтыми маркерами обозначены стоянки эвакуаторов.</li>
+                    <li class="price__step">Увеличьте масштаб и определите, какой из адресов находится рядом с местом вашей дислокации.</li>
+                    <li class="price__step">Выберите ближайший эвакуатор и нажмите на соответствующий маркер.</li>
+                    <li class="price__step">Просмотрите детальную информацию о перевозчике: возможные способы погрузки ТС, комплектация автомобиля, тарифы транспортируемых авто вместе с ценами.</li>
+                    <li class="price__step">Кликните по голубому полю внизу карточки перевозчика и возьмите телефонный номер компании.</li>
+                    <li class="price__step">Созвонитесь с диспетчером фирмы, обсудите детали эвакуации в Москве/МО и стоимость заказа.</li>
+                    <li class="price__step">Сравните цены и условия перевозки у нескольких компаний, выберите наиболее подходящий для себя вариант.</li>
+                </ol>
+            </div>
+
+        </div>
+
+        <p class="px-torem">1111111111</p>
+        <p class="px-torem1">1111111111</p>
+        <p class="px-torem2">1111111111</p>
+    </section>
+
     <footer class="footer">
         <div class="footer__content">
             <p class="footer__text">© ТутЭвакуатор.Ру 2021</p>
@@ -315,8 +373,8 @@
         </div>
     </footer>
 
-    <script src="./js/swiper-bundle.min.js"></script>
-    <script src="./js/main.js"></script>
+
+    <script src="./js/main.js" defer></script>
 
 </body>
 
