--- a/index.html
+++ b/index.html
@@ -360,13 +360,14 @@
             </div>
 
         </div>
-
+        <!-- 
         <p class="px-torem">1111111111</p>
         <p class="px-torem1">1111111111</p>
         <p class="px-torem2">1111111111</p>
+        -->
     </section>
 
-    <footer class="footer">
+    <footer class="footer none">
         <div class="footer__content">
             <p class="footer__text">© ТутЭвакуатор.Ру 2021</p>
             <a href="#" class="footer__link">Политика конфиденциальности</a>
