--- a/index.html
+++ b/index.html
@@ -12,16 +12,36 @@
 </head>
 
 <body>
-    <header class="header none1">
+    <header class="header none1" id="header">
         <div class="header__logo">
             <img src="./images/logo.svg" alt="Logo">
         </div>
         <nav class="header__nav">
             <ul class="header__menu">
-                <li class="header__menu-item"><a href="#">о проекте</a></li>
+                <li class="header__menu-item"><a href="#advantages">о проекте</a></li>
                 <li class="header__menu-item"><a href="#">контакты</a></li>
             </ul>
+
             <a href="#" class="header__button btn">Добавить объявление</a>
+
+            <button class="header__burger-btn" id="burger">
+                <span></span><span></span><span></span>
+            </button>
+
+            <div class="menu" id="menu">
+                <ul class="menu__list">
+                    <li class="menu__item">
+                        <a class="menu__link" href="#advantages">О проекте</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">Контакты</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">Добавить объявление</a>
+                    </li>
+                </ul>
+            </div>
+
         </nav>
     </header>
 
@@ -158,7 +178,7 @@
         </div>
     </section>
 
-    <section class="advantages none1">
+    <section class="advantages none1" id="advantages">
         <div class="container">
             <h2 class="advantages__title h2-text">Преимущества онлайн-сервиса ТутЭвакуатор.Ру</h2>
             <div class="advantages__wrapper">
@@ -367,13 +387,36 @@
         -->
     </section>
 
-    <footer class="footer none">
-        <div class="footer__content">
-            <p class="footer__text">© ТутЭвакуатор.Ру 2021</p>
-            <a href="#" class="footer__link">Политика конфиденциальности</a>
+    <footer class="footer none1">
+        <!-- <div class="arrow-up"> -->
+        <a class="arrow-up" href="#header"></a>
+        <!-- </div> -->
+
+        <div class="footer__wrapper container">
+            <div class="footer__logo">
+                <img src="./images/logo.svg" alt="Логотип">
+            </div>
+            <nav class="footer__nav">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">вызвать эвакуатор</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">добавить эвакуатор на сайт</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">помощь</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">правила оплаты</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">защита персональных данных</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </footer>
-
 
     <script src="./js/main.js" defer></script>
 
