fix: footer menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header none1" id="header">
+    <header class="header none1">
         <div class="header__logo">
             <img src="./images/logo.svg" alt="Logo">
         </div>
@@ -45,7 +45,7 @@
         </nav>
     </header>
 
-    <section class="hero none1">
+    <section class="hero none1" id="hero">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
@@ -136,15 +136,15 @@
 
     <section class="steps none1">
         <div class="container">
-            <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
+            <h2 class="steps__title h2-text">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
             <div class="steps__list">
                 <div class="steps__item">
                     <img src="./images/steps/steps-item1.webp" alt="Шаг 1" class="steps__icon1">
-                    <p class="steps__text">Заказы на вызов эвакуатора в Москве перевозчики-партнеры “Тут Эвакуатор” принимают круглосуточно. Когда бы вы не позвонили, эвакуатор найдется всегда. Размещая заказ на эвакуатор, ознакомьтесь с информацией о транспортной компании, проконсультируйтесь с ее специалистами и выберите оптимальный вариант перевозки своего ТС.</p>
+                    <p class="steps__text p-text">Заказы на вызов эвакуатора в Москве перевозчики-партнеры “Тут Эвакуатор” принимают круглосуточно. Когда бы вы не позвонили, эвакуатор найдется всегда. Размещая заказ на эвакуатор, ознакомьтесь с информацией о транспортной компании, проконсультируйтесь с ее специалистами и выберите оптимальный вариант перевозки своего ТС.</p>
                 </div>
                 <div class="steps__item">
                     <img src="./images/steps/steps-item2.webp" alt="Шаг 2" class="steps__icon2">
-                    <p class="steps__text">Примите во внимание, что одни и те же виды эвакуаторов рассчитаны на транспортировку авто разных классов. Вопрос заключается лишь в том, какой тип эвакуатор будет выгоднее задействовать в вашем случае. Следуя рекомендациям перевозчика, вы сможете недорого эвакуировать авто как в Москве, так и в области.</p>
+                    <p class="steps__text p-text">Примите во внимание, что одни и те же виды эвакуаторов рассчитаны на транспортировку авто разных классов. Вопрос заключается лишь в том, какой тип эвакуатор будет выгоднее задействовать в вашем случае. Следуя рекомендациям перевозчика, вы сможете недорого эвакуировать авто как в Москве, так и в области.</p>
                 </div>
             </div>
         </div>
@@ -152,8 +152,8 @@
 
     <section class="what-inside none1">
         <div class="container">
-            <h2 class="what-inside__title">Что входит в стоимость перевозки эвакуатором</h2>
-            <p class="what-inside__desc">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
+            <h2 class="what-inside__title h2-text">Что входит в стоимость перевозки эвакуатором</h2>
+            <p class="what-inside__desc p-text">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
             <p class="what-inside__text">При формировании цены перевозчики берут в расчет четыре аспекта:</p>
             <div class="what-inside__box">
                 <div class="truck">
@@ -376,7 +376,7 @@
     </section>
 
     <footer class="footer none1">
-        <a class="arrow-up" href="#header"></a>
+        <a class="arrow-up" href="#hero"></a>
 
         <div class="footer__wrapper container">
             <div class="footer__logo">
