--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="service-card__wrapper">
                     <div class="service-card__img">
-                        <img src="./images/services/ev-photo1.webp" alt="Эвакуатор">
+                        <img src="./images/services/ev-photo1.webp" alt="Эвакуатор" width="414" height="328">
                     </div>
 
                     <div class="service-card__info">
