--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="service-card__wrapper">
                     <div class="service-card__img">
-                        <img src="./images/services/ev-photo1.webp" alt="Эвакуатор" width="414" height="328">
+                        <img src="./images/services/ev-photo1.webp" alt="Эвакуатор с платформой" width="414" height="328">
                     </div>
 
                     <div class="service-card__info">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="call-tow__img">
-                    <img src="./images/how-to/how-to-call.webp" alt="">
+                    <img src="./images/how-to/how-to-call.webp" alt="Как вызвать эвакуатор в Москве?" width="677" height="610">
                 </div>
             </article>
         </div>
@@ -139,11 +139,11 @@
             <h2 class="steps__title h2-text">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
             <div class="steps__list">
                 <div class="steps__item">
-                    <img src="./images/steps/steps-item1.webp" alt="Шаг 1" class="steps__icon1">
+                    <img src="./images/steps/steps-item1.webp" alt="Шаг 1" class="steps__icon1" width="347" height="297">
                     <p class="steps__text p-text">Заказы на вызов эвакуатора в Москве перевозчики-партнеры “Тут Эвакуатор” принимают круглосуточно. Когда бы вы не позвонили, эвакуатор найдется всегда. Размещая заказ на эвакуатор, ознакомьтесь с информацией о транспортной компании, проконсультируйтесь с ее специалистами и выберите оптимальный вариант перевозки своего ТС.</p>
                 </div>
                 <div class="steps__item">
-                    <img src="./images/steps/steps-item2.webp" alt="Шаг 2" class="steps__icon2">
+                    <img src="./images/steps/steps-item2.webp" alt="Шаг 2" class="steps__icon2" width="320" height="289">
                     <p class="steps__text p-text">Примите во внимание, что одни и те же виды эвакуаторов рассчитаны на транспортировку авто разных классов. Вопрос заключается лишь в том, какой тип эвакуатор будет выгоднее задействовать в вашем случае. Следуя рекомендациям перевозчика, вы сможете недорого эвакуировать авто как в Москве, так и в области.</p>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                     </ul>
                 </div>
                 <div class="advantages__img">
-                    <img src="./images/advantages/man.webp" alt="Man">
+                    <img src="./images/advantages/man.webp" alt="Человек указывает на преимущества сервиса" width="630" height="645">
                 </div>
             </div>
 
@@ -232,7 +232,7 @@
                     <div class="evacuator-card swiper-slide">
                         <h4 class="evacuator-card__title card-title">Эвакуатор с краном-манипулятором и прямой платформой</h4>
                         <div class="evacuator-card__image">
-                            <img src="./images/evacuator/crane-evacuator.webp" alt="Эвакуатор с краном-манипулятором и прямой платформой">
+                            <img src="./images/evacuator/crane-evacuator.webp" alt="Эвакуатор с краном-манипулятором и прямой платформой" width="604" height="322">
                         </div>
                         <p class="evacuator-card__description card-desc">
                             Компактный и маневренный эвакуатор для транспортировки авто массой до 3.5 т. За счет вылета стрелы манипулятора осуществляет погрузку/разгрузку ТС с расстояния до 5 м. Удобен для эвакуации автомобилей с узких улиц/дворов, небольших стоянок/парковок Москвы.
@@ -242,7 +242,7 @@
                     <div class="evacuator-card swiper-slide">
                         <h4 class="evacuator-card__title card-title">Эвакуатор с манипулятором и ломаной/сдвижной платформой</h4>
                         <div class="evacuator-card__image">
-                            <img src="./images/evacuator/universal-evacuator.webp" alt="Эвакуатор с манипулятором и ломаной/сдвижной платформой">
+                            <img src="./images/evacuator/universal-evacuator.webp" alt="Эвакуатор с манипулятором и ломаной/сдвижной платформой" width="604" height="322">
                         </div>
                         <p class="evacuator-card__description card-desc">
                             Универсальный и надежный эвакуатор для эвакуации любых видов транспортных средств, включая крупную сельскохозяйственную/строительную/коммунальную технику, а также авто с низким клиренсом. Этот тип эвакуатора может быть задействован при перевозке как сильно пострадавших в аварии автомобилей, так и ТС, которые в состоянии самостоятельно заехать на платформу эвакуатора.
@@ -252,7 +252,7 @@
                     <div class="evacuator-card swiper-slide">
                         <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и платформой с аппарелями</h4>
                         <div class="evacuator-card__image">
-                            <img src="./images/evacuator/winch-platform-evacuator.webp" alt="Эвакуатор с лебедкой и платформой с аппарелями">
+                            <img src="./images/evacuator/winch-platform-evacuator.webp" alt="Эвакуатор с лебедкой и платформой с аппарелями" width="604" height="322">
                         </div>
                         <p class="evacuator-card__description card-desc">
                             Используется для перевозки ТС массой до 7 т. Автомобиль затаскивают на платформу эвакуатора по направляющим при помощи электрической/гидравлической/ручной лебедки. Эвакуатор данной модификации не применяется для транспортировки авто с АКПП или заблокированными колесами.
@@ -262,7 +262,7 @@
                     <div class="evacuator-card swiper-slide">
                         <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто</h4>
                         <div class="evacuator-card__image">
-                            <img src="./images/evacuator/partial-load-evacuator.webp" alt="Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто">
+                            <img src="./images/evacuator/partial-load-evacuator.webp" alt="Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто" width="604" height="322">
                         </div>
                         <p class="evacuator-card__description card-desc">
                             Основное назначение – транспортировка крупнотоннажной спецтехники, грузовых авто, автобусов.
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <div class="image-block">
-                <img src="./images/info/info-block1.webp" alt="Эвакуатор" class="image-block__image">
+                <img src="./images/info/info-block1.webp" alt="Женщина сообщает необходимые сведения" class="image-block__image" width="960" height="855">
             </div>
         </div>
 
@@ -318,7 +318,7 @@
                 </div>
             </div>
             <div class="image-block">
-                <img src="./images/info/info-block2.webp" alt="Эвакуатор" class="image-block__image">
+                <img src="./images/info/info-block2.webp" alt="Работник сервиса с инструментом" class="image-block__image" width="961" height="1203">
             </div>
         </div>
     </section>
